[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/images/soucoupe_2.png" type="Texture" id=1]
[ext_resource path="res://scenes/transition_menu/transition_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/images/bg_02.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Bungee-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/audio/sound/whistle.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/sound/pause.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/images/menu/pause_button.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 100
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 158, 158 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 158, 158 )
modulate_color = Color( 0.345098, 0.345098, 0.345098, 1 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 158, 158 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 158, 158 )
modulate_color = Color( 0.368627, 0.368627, 0.368627, 0.376471 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 158, 158 )

[sub_resource type="DynamicFont" id=8]
size = 60
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 30
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 750.0
margin_bottom = 1333.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hearts2" type="HBoxContainer" parent="."]
margin_left = 63.7172
margin_top = 513.111
margin_right = 902.717
margin_bottom = 758.111
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.735444, 0.735444 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="TextureRect" parent="hearts2"]
modulate = Color( 0.505882, 1, 0.258824, 1 )
margin_right = 277.0
margin_bottom = 245.0
texture = ExtResource( 1 )

[node name="2" type="TextureRect" parent="hearts2"]
modulate = Color( 0.505882, 1, 0.258824, 1 )
margin_left = 281.0
margin_right = 558.0
margin_bottom = 245.0
texture = ExtResource( 1 )

[node name="3" type="TextureRect" parent="hearts2"]
modulate = Color( 0.505882, 1, 0.258824, 1 )
margin_left = 562.0
margin_right = 839.0
margin_bottom = 245.0
texture = ExtResource( 1 )

[node name="score" type="RichTextLabel" parent="."]
margin_left = 2.0
margin_top = 873.0
margin_right = 748.0
margin_bottom = 975.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "score : 0"
text = "score : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best_score" type="Label" parent="."]
margin_left = 2.0
margin_top = 987.22
margin_right = 1186.0
margin_bottom = 1087.22
rect_scale = Vector2( 0.630264, 0.630264 )
custom_fonts/font = SubResource( 2 )
text = "best : 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="result" type="Label" parent="."]
margin_left = 2.0
margin_top = 360.99
margin_right = 1186.0
margin_bottom = 460.99
rect_scale = Vector2( 0.630264, 0.630264 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="pause" type="Button" parent="."]
margin_left = 563.0
margin_top = 20.0
margin_right = 730.0
margin_bottom = 184.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_left = 94.0
margin_top = 214.0
margin_right = 646.0
margin_bottom = 1249.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PopupMenu"]
modulate = Color( 0, 0, 0, 0.415686 )
show_behind_parent = true
margin_left = -139.053
margin_top = -249.0
margin_right = 687.947
margin_bottom = 1167.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause2" type="Label" parent="PopupMenu"]
pause_mode = 2
margin_left = 2.0
margin_top = 5.0
margin_right = 549.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 8 )
text = "Pause"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="Label" parent="PopupMenu"]
pause_mode = 2
margin_left = 2.0
margin_top = 262.349
margin_right = 551.0
margin_bottom = 403.349
custom_fonts/font = SubResource( 9 )
text = "accelerometer sensibility"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info2" type="Label" parent="PopupMenu"]
pause_mode = 2
margin_left = 2.0
margin_top = 367.842
margin_right = 549.0
margin_bottom = 436.842
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="PopupMenu"]
pause_mode = 2
margin_left = 29.3383
margin_top = 412.23
margin_right = 106.338
margin_bottom = 428.23
rect_scale = Vector2( 6.51383, 6.51383 )
max_value = 1.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause" type="AudioStreamPlayer" parent="PopupMenu"]
pause_mode = 2
stream = ExtResource( 6 )
volume_db = 10.0

[node name="quit" type="Button" parent="PopupMenu"]
pause_mode = 2
margin_left = 108.651
margin_top = 917.039
margin_right = 187.651
margin_bottom = 937.039
rect_scale = Vector2( 4.09451, 4.09451 )
text = "Quit game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 5.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="pause" to="." method="_on_pause_pressed"]
[connection signal="popup_hide" from="PopupMenu" to="." method="_on_PopupMenu_popup_hide"]
[connection signal="value_changed" from="PopupMenu/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="PopupMenu/quit" to="." method="_on_quit_pressed"]
